[HMB-0] Update java_opts and wiki